Open some packages for reflection in Java 9+ - it prevents the Illegal reflective access warnings caused by Hazelcast