@@ -1023,13 +1023,28 @@
                             <useFile>false</useFile>
                             <trimStackTrace>false</trimStackTrace>
                             <!--
-                            The jdk.xml.internal package export is added to workaround Powermock issue https://github.com/powermock/powermock/issues/905 in tests.
-                            The package opening from jdk.management module is added to allow reflection access to OS level metrics in OperatingSystemMetricSet class.
+                            Allow access to Operating system metrics:
+                                open jdk.management/com.sun.management.internal
+
+                            Avoid warnings caused by reflection in
+                            SelectorOptimizer:
+                                open java.base/sun.nio.ch
+                            FilteringClassLoader:
+                                open java.base/java.lang
+                            TimedMemberStateFactoryHelper:
+                                open java.management/sun.management
+
+                            Powermock issue workaround (https://github.com/powermock/powermock/issues/905):
+                                export java.xml/jdk.xml.internal
                              -->
                             <argLine>
                                 ${vmHeapSettings}
-                                --add-exports java.xml/jdk.xml.internal=ALL-UNNAMED
                                 --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                                --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --add-opens java.management/sun.management=ALL-UNNAMED
+                                --add-exports java.xml/jdk.xml.internal=ALL-UNNAMED
+                                --illegal-access=warn
                                 -Dhazelcast.phone.home.enabled=false
                                 -Dhazelcast.mancenter.enabled=false
                                 -Dhazelcast.test.use.network=false
